--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,9 @@
 @import url("~/node_modules/water.css/out/light.min.css");
 
+body {
+  background-color: #c3f4fa;
+}
+
 .flex {
   display: flex;
 }
